--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,7 +18,7 @@
           
           {% endif %}
           <span class="point"> · </span>
-          <span><a href="{{ "/feed.xml" | prepend: site.baseurl }}">RSS</a></span>
+          <span><a href="http://www.jianshu.com/users/e67611a6379b/latest_articles">简书</a></span>
           <span class="point"> · </span>
           <span>{{ site.description }}</span>
           <span class="point"> · </span>
