--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
         <a href="mailto:{{ site.email }}"><span class="glyphicon glyphicon-envelope"></span> {{ site.email }}</a>
         <span class="point"> · </span>
         {% if site.github_username %}
-          
+          <span>Follow me on</span>
           <a href="https://github.com/{{ site.github_username }}">
             <span class="icon">
               <svg viewBox="0 0 16 16">
