--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,7 +22,7 @@
           <span class="point"> · </span>
           <span>{{ site.description }}</span>
           <span class="point"> · </span>
-          <span>&copy; 2016 xcldswz</span>
+          <span>&copy; 2016 机·智互联教育平台</span>
           <span class="point"> · </span>
           <span>Designed by <a href="https://github.com/xcldswz">xcldswz</a></span>
 
