--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 ---
+<div class="row">
+  <div id="myArticle" class="col-sm-9">
 <div class="post-area post">
     <header>
         <h1>{{ page.title }}</h1>
@@ -13,7 +15,19 @@ layout: default
 <div class="post-area post comment">
     <!-- 多说评论框 start -->
     
-    <div class="ds-thread" data-thread-key="{{ page.id }}" data-title="{{ page.title }}" data-url="gaohaoyang.github.io{{ page.url }}"></div>
+    <div class="ds-thread" data-thread-key="{{ page.id }}" data-title="{{ page.title }}" data-url="howiewang.github.io{{ page.url }}"></div>
+</div>
+</div>
     
     <!-- 多说评论框 end -->
+ <div id="content" class="col-sm-3">
+    <!-- <div id="myAffix" class="shadow-bottom-center hidden-xs" data-spy="affix" data-offset-top="0" data-offset-bottom="-20"> -->
+    <div id="myAffix" class="shadow-bottom-center hidden-xs" >
+      <div class="categories-list-header">
+        Content
+      </div>
+      <div class="content-text"></div>
+    </div>
+  </div>
+
 </div>
